--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,11 @@
  <%- include("partials/header") -%>
     <h1>Home</h1>
     <p><%=head1%><p>
-    <%   posts.forEach(function(posts){   %>
-       <h1><%=posts.postTitle%></h1>
+    <%   posts.forEach(function(post){   %>
+       <h1><%=post.postTitle%></h1>
 
-      <p><%=posts.postBody.substring(0,100) + " ... " %>
-        <a href="/posts/<%=posts.postTitle%>" >Read More</a>
+      <p><%=post.postBody.substring(0,100)+ " ... " %>
+        <a href="/posts/<%=post._id%>" >Read More</a>
       </p>
 <%  }); %>
 <%- include("partials/footer") -%>
