--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header") -%>
-<h1><%=posts.postTitle%></h1>
-<p><%=posts.postBody %></p>
+<h1><%=postTitle%></h1>
+<p><%=postBody %></p>
 
 <%- include("partials/footer") -%>
